tools/terraform/modules/application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${namespace}
  name: pearler-api
spec:
  ports:
    - port: 80
      targetPort: 3422
      protocol: TCP
  selector:
    app.kubernetes.io/name: pearler-api
